--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'//解析JSON数据
     implementation 'com.github.bumptech.glide:glide:4.15.1'//加载和展示图片
     implementation 'androidx.preference:preference:1.1.1'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
 }
