--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,17 @@ android {
         viewBinding true
     }
 }
+android {
+    defaultConfig {
+        ndk {
+            // 设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86","x86_64"
+        }
+    }
+}
+dependencies {
+    implementation 'com.baidu.lbsyun:BaiduMapSDK_Location_All:9.3.7'
+}
 
 dependencies {
 
@@ -53,6 +64,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'//解析JSON数据
     implementation 'com.github.bumptech.glide:glide:4.15.1'//加载和展示图片
     implementation 'androidx.preference:preference:1.1.1'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'com.baidu.lbsyun:BaiduMapSDK_Search:7.5.4'
 }
+
